Update SPDX headers