@@ -1,7 +1,5 @@
-/*
-   Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
-   SPDX-License-Identifier: Apache-2.0
-*/
+// Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
+// SPDX-License-Identifier: Apache-2.0
 
 package com.example.photo.handlers;
 
@@ -26,14 +24,15 @@ public class RestoreHandler implements RequestHandler<Map<String, Object>, Strin
             context.getLogger().log("RestoreHandler handleRequest" + toJson(input));
             JSONObject body = new JSONObject(input);
             List<String> labels = body.getJSONArray("labels")
-                .toList()
-                .stream()
-                .filter(String.class::isInstance)
-                .map(String.class::cast)
-                .collect(Collectors.toList());
+                    .toList()
+                    .stream()
+                    .filter(String.class::isInstance)
+                    .map(String.class::cast)
+                    .collect(Collectors.toList());
             context.getLogger().log("Restoring labels " + toJson(labels));
 
-            DownloadEndpoint downloadEndpoint = new DownloadEndpoint(new DynamoDBService(), new S3Service(), new SnsService());
+            DownloadEndpoint downloadEndpoint = new DownloadEndpoint(new DynamoDBService(), new S3Service(),
+                    new SnsService());
             String url = downloadEndpoint.download(labels);
             context.getLogger().log("Labels archived to URL " + url);
 
